# MPM-2D-Simple

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  colorsave  compile.sh  configparser.cpp  configparser.hpp  cube.txt  defines.hpp  eigenTest.cpp  eulerContour.m  fastsweep.cpp  grid.cpp  grid.hpp  interpTest.cpp  main.cpp  main2.cpp  material.cpp  material.hpp  partioTest.cpp  plotmatfield  plotpointfield  plotvecfield  sparse.cpp  sparse.hpp  test.bgeo  tests.sh
cmake/: FindEigen3.cmake
input_files/: circle.json  cube.json  cube2.txt  cube3.txt  disc.json  disc_jitter.json  disc_lin.json  disc_rand.json  disc_rot.json  disc_rot_small.json  euler.json  euler_grav.json  euler_lin.json  euler_rot.json  line.json  linear.json  mat_none.json  mat_rot.json  none.json  report.json  single.json  square_rot.json  testConfig.txt
input_files/parts/: disc.bgeo  disc_2.bgeo  disc_jitter.bgeo  disc_jitter_small.bgeo  disc_linear.bgeo  disc_random.bgeo  disc_slow.bgeo  line.bgeo  mat_none.bgeo  report.bgeo  single.bgeo  square_rot.bgeo
input_files/parts/stable/: disc_1.bgeo  disc_2.bgeo
input_files/stable/: disc_rot1.json  disc_rot2.json  disc_rot3.json  disc_rot4.json  disc_rot5.json  disc_rot6.json
report/apicdisp/: F2-0  F2-1  F2-10  F2-11  F2-12  F2-13  F2-14  F2-15  F2-16  F2-17  F2-18  F2-19  F2-2  F2-20  F2-21  F2-22  F2-23  F2-24  F2-25  F2-26  F2-27  F2-28  F2-29  F2-3  F2-4  F2-5  F2-6  F2-7  F2-8  F2-9  frcfield-1  frcfield-10  frcfield-11  frcfield-12  frcfield-13  frcfield-14  frcfield-15  frcfield-16  frcfield-17  frcfield-18  (+139 more)
report/apicu/: frcfield-0  frcfield-1  frcfield-10  frcfield-11  frcfield-12  frcfield-13  frcfield-14  frcfield-15  frcfield-16  frcfield-17  frcfield-18  frcfield-19  frcfield-2  frcfield-20  frcfield-21  frcfield-22  frcfield-23  frcfield-24  frcfield-25  frcfield-26  frcfield-27  frcfield-28  frcfield-29  frcfield-3  frcfield-4  frcfield-5  frcfield-6  frcfield-7  frcfield-8  frcfield-9  invmatcoords.txt  materror-0  materror-1  materror-10  materror-11  materror-12  materror-13  materror-14  materror-15  materror-16  (+110 more)
report/base/: invmatcoords.txt  materror-0  materror-1  materror-10  materror-11  materror-12  materror-13  materror-14  materror-15  materror-16  materror-17  materror-18  materror-19  materror-2  materror-20  materror-21  materror-22  materror-23  materror-24  materror-25  materror-26  materror-27  materror-28  materror-29  materror-3  materror-4  materror-5  materror-6  materror-7  materror-8  materror-9  particles-00.000001.bgeo  particles-00.000003.bgeo  particles-00.000004.bgeo  particles-00.000005.bgeo  particles-00.000006.bgeo  particles-00.000009.bgeo  particles-00.000012.bgeo  particles-00.000018.bgeo  particles-00.000019.bgeo  (+21 more)
report/simpledisp/: F2-1  F2-10  F2-11  F2-12  F2-13  F2-14  F2-15  F2-16  F2-17  F2-18  F2-19  F2-2  F2-20  F2-21  F2-22  F2-23  F2-24  F2-25  F2-26  F2-27  F2-28  F2-29  F2-3  F2-4  F2-5  F2-6  F2-7  F2-8  F2-9  frcfield-0  frcfield-1  frcfield-10  frcfield-11  frcfield-12  frcfield-13  frcfield-14  frcfield-15  frcfield-16  frcfield-17  frcfield-18  (+138 more)
report/simpleu/: frcfield-0  frcfield-1  frcfield-10  frcfield-2  frcfield-3  frcfield-4  frcfield-5  frcfield-6  frcfield-7  frcfield-8  frcfield-9  materror-0  materror-1  materror-10  materror-2  materror-3  materror-4  materror-5  materror-6  materror-7  materror-8  materror-9  oldvelfield-0  oldvelfield-1  oldvelfield-10  oldvelfield-2  oldvelfield-3  oldvelfield-4  oldvelfield-5  oldvelfield-6  oldvelfield-7  oldvelfield-8  oldvelfield-9  particles-00.000001.bgeo  particles-00.000002.bgeo  particles-00.000003.bgeo  particles-00.000004.bgeo  particles-00.000005.bgeo  particles-00.000006.bgeo  particles-00.000007.bgeo  (+14 more)
src/: configparser.cpp  configparser.hpp  defines.hpp  eulercorotation.cpp  eulermain.cpp  eulerobject.cpp  eulerworld.cpp  eulerworld.hpp  grid.cpp  main.cpp  main2.cpp  mainDump.cpp  main_graphics.cpp  material.cpp  material.hpp  mpm.hpp  profiler.hpp  sampler.cpp  viewer.cpp  world.cpp  world.hpp
